--- a/src/pages/Feed.css
+++ b/src/pages/Feed.css
@@ -1,5 +1,21 @@
+textarea:focus {
+  outline: none;
+}
 
-textarea:focus{
-    outline: none;
-  }
- 
+textarea {
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.postForm {
+  box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
+    0px 5px 8px 0px rgb(0 0 0 / 14%), 0px 1px 14px 0px rgb(0 0 0 / 12%);
+}
+
+.btn:hover {
+  color: blueviolet;
+  border: blueviolet 1px solid !important;
+}
+
+.menuIcon:hover{
+  fill: blueviolet
+}
