--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -21,3 +21,6 @@ body {
     background-color: rgba(255, 255, 255, 0) !important;
 }
 
+.btnHome:hover{
+    background-color: blueviolet !important;
+}
