--- a/src/pages/Feed.css
+++ b/src/pages/Feed.css
@@ -19,3 +19,18 @@ textarea {
 .menuIcon:hover{
   fill: blueviolet
 }
+
+.photo{ 
+  display: flex;
+  justify-content: center;
+  height: 25vw;
+  width: 25vw;
+  border-radius: 10px;
+}
+
+img {
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
