--- a/src/pages/Feed.css
+++ b/src/pages/Feed.css
@@ -16,11 +16,16 @@ textarea {
   border: blueviolet 1px solid !important;
 }
 
-.menuIcon:hover{
-  fill: blueviolet
+.menuIcon:hover {
+  fill: blueviolet;
 }
 
-.photo{ 
+.btnDel:hover {
+  border: blueviolet 1px solid !important;
+  background-color: white !important;
+}
+
+.photo {
   display: flex;
   justify-content: center;
   height: 25vw;
@@ -29,8 +34,8 @@ textarea {
 }
 
 img {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
 }
