--- a/src/pages/Feed.css
+++ b/src/pages/Feed.css
@@ -28,14 +28,12 @@ textarea {
 .photo {
   display: flex;
   justify-content: center;
-  height: 25vw;
-  width: 25vw;
   border-radius: 10px;
 }
 
-img {
+.photo {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 10px;
 }
